Got 3D version working better. Still have a bug where back tile faces are drawn at half width sometimes.

--- a/styles/main.css
+++ b/styles/main.css
@@ -6743,3 +6743,12 @@ textarea {
 .bgblack {
   background: black;
 }
+/* 
+main {
+  width: 100%;
+  margin: 0 1rem;
+}
+
+.row {
+  width: 100%;
+} */
