--- a/styles/main.css
+++ b/styles/main.css
@@ -298,7 +298,7 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-family: "PT Sans", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
   line-height: 1.2;
   color: inherit; }
@@ -6494,7 +6494,7 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
 
 .top-navbar {
-  font-family: "PT Sans", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
   background-color: #383844;
   padding-top: 0;
@@ -6752,3 +6752,7 @@ main {
 .row {
   width: 100%;
 } */
+
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
