--- a/styles/style.css
+++ b/styles/style.css
@@ -20,17 +20,138 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #ffffff;
   text-align: left;
-  background-color: #fff; 
+  background-color: rgb(82, 82, 82); 
 }
 
 button {
-  border-radius: 0; }
+  border-radius: 0; 
+}
 
 button:focus {
   outline: 1px dotted;
-  outline: 5px auto -webkit-focus-ring-color; }
+  outline: 5px auto -webkit-focus-ring-color; 
+}
+
+input,
+button,
+select,
+optgroup,
+textarea {
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit; 
+}
+
+button,
+input {
+  overflow: visible; 
+}
+
+button,
+select {
+  text-transform: none; 
+}
+
+button,
+html [type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button; 
+}
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  padding: 0;
+  border-style: none; 
+}
+
+.bg-primary {
+  background-color: #c9441e !important; 
+}
+
+a.bg-primary:hover, a.bg-primary:focus,
+button.bg-primary:hover,
+button.bg-primary:focus {
+  background-color: #9d3517 !important; 
+}
+
+.bg-secondary {
+  background-color: rgb(139, 151, 161) !important; 
+  color: white;
+  font-style: bold;
+}
+
+a.bg-secondary:hover, a.bg-secondary:focus,
+button.bg-secondary:hover,
+button.bg-secondary:focus {
+  background-color: #545b62 !important; 
+}
+
+.bg-success {
+  background-color: #28a745 !important; 
+}
+
+a.bg-success:hover, a.bg-success:focus,
+button.bg-success:hover,
+button.bg-success:focus {
+  background-color: #1e7e34 !important; 
+}
+
+.bg-info {
+  background-color: #17a2b8 !important; 
+}
+
+a.bg-info:hover, a.bg-info:focus,
+button.bg-info:hover,
+button.bg-info:focus {
+  background-color: #117a8b !important; 
+}
+
+.bg-warning {
+  background-color: #ffc107 !important; 
+}
+
+a.bg-warning:hover, a.bg-warning:focus,
+button.bg-warning:hover,
+button.bg-warning:focus {
+  background-color: #d39e00 !important; 
+}
+
+.bg-danger {
+  background-color: #dc3545 !important; 
+}
+
+a.bg-danger:hover, a.bg-danger:focus,
+button.bg-danger:hover,
+button.bg-danger:focus {
+  background-color: #bd2130 !important; 
+}
+
+.bg-light {
+  background-color: #f8f9fa !important; 
+}
+
+a.bg-light:hover, a.bg-light:focus,
+button.bg-light:hover,
+button.bg-light:focus {
+  background-color: #dae0e5 !important; 
+}
+    
+.bg-dark {
+  background-color: #383844 !important; 
+}
+    
+a.bg-dark:hover, a.bg-dark:focus,
+button.bg-dark:hover,
+button.bg-dark:focus {
+  background-color: #212128 !important; 
+}
+    
 
 .mt1rem {
   margin-top: 1rem;
