--- a/styles/style.css
+++ b/styles/style.css
@@ -203,3 +203,57 @@ button.bg-dark:focus {
   position: absolute;
   inset: 0;
 }
+
+#settings-row {
+  position: absolute;
+  left: -10000px;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#settings-row.isShown {
+  inset: 0;
+}
+
+#settings-bg {
+  position: absolute;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+#controls-holder {
+  position: absolute;
+  padding: 20px;
+  inset: 200px 150px 100px 150px;
+  background-color: rgba(255, 255, 255, 0.5);
+  color: rgb(20, 20, 20);
+  font-size: 1.5rem;
+}
+
+#controls-holder table {
+  border: 1px solid silver;
+  padding: 20px 40px;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.8);
+}
+
+#controls-holder table .first-col {
+  width: 50%;
+}
+
+#controls-holder table input[type="range"] {
+  width: 100%;
+}
+
+#btn-close-params {
+  position: absolute;
+  z-index: 10;
+  right: 20px;
+  top: 20px;
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  font-size: 1rem;
+  text-align: center;
+}
