Make grid smaller with fewer divisions in bricks for better performance in exhibition. Tweak tile and ui of 2d boards.

--- a/styles/style.css
+++ b/styles/style.css
@@ -269,5 +269,7 @@ button.bg-dark:focus {
   height: 40px;
   border-radius: 20px;
   font-size: 1rem;
+  font-weight: bold;
   text-align: center;
+  color: white;
 }
