--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
 }
 
 html {
+  height: 100%;
   font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
@@ -15,6 +16,7 @@ html {
 }
 
 body {
+  height: 100%;
   margin: 0;
   font-family: "sans-serif";
   font-size: 1rem;
@@ -161,6 +163,10 @@ button.bg-dark:focus {
   margin-left: 1rem;
 }
 
+main {
+  min-height: 100%;
+}
+
 .container {
   width: 100%;
   padding-right: 15px;
@@ -272,4 +278,18 @@ button.bg-dark:focus {
   font-weight: bold;
   text-align: center;
   color: white;
+}
+
+#server-url {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  padding: 4px 4px;
+  color: #666;
+  font-size: 1rem;
+}
+
+#server-url-link {
+  color: #888;
+  font-size: 1rem;
 }
