--- a/styles/style.css
+++ b/styles/style.css
@@ -225,15 +225,18 @@ main {
 }
 
 #settings-row {
-  position: absolute;
+  position: fixed;
   left: -10000px;
   top: 0;
-  width: 100%;
-  height: 100%;
+  bottom: 0;
+  right: 10000px;
+  /* width: 100%;
+  height: 100%; */
 }
 
 #settings-row.isShown {
-  inset: 0;
+  left: 0;
+  right: 0;
 }
 
 #settings-bg {
@@ -245,7 +248,7 @@ main {
 #controls-holder {
   position: absolute;
   padding: 20px;
-  inset: 200px 150px 100px 150px;
+  inset: 350px 200px 200px 200px;
   background-color: rgba(255, 255, 255, 0.5);
   color: rgb(20, 20, 20);
   font-size: 1.5rem;
@@ -331,3 +334,11 @@ main {
   font-size: 1rem;
 }
 
+#example-tile-holder {
+  position: absolute;
+  inset: 0;
+}
+
+.row.full-height {
+  height: 100%;
+}
