--- a/styles/style.css
+++ b/styles/style.css
@@ -3,15 +3,17 @@
 *::after {
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
   height: 100%;
   font-family: sans-serif;
-  line-height: 1.15;
+  /* line-height: 1.15; */
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
-  -ms-overflow-style: scrollbar;
+  -ms-overflow-style: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
 }
 
@@ -21,11 +23,14 @@ body {
   font-family: "sans-serif";
   font-size: 1rem;
   font-weight: 400;
-  line-height: 1.5;
+  /* line-height: 1.5; */
   color: #ffffff;
   text-align: left;
-  background-color: rgb(82, 82, 82); 
+  background-color: rgb(255, 0, 0); /* rgb(82, 82, 82); */
+  overflow: clip;
 }
+
+/*
 
 button {
   border-radius: 0; 
@@ -235,8 +240,8 @@ main {
   top: 0;
   bottom: 0;
   right: 10000px;
-  /* width: 100%;
-  height: 100%; */
+  / * width: 100%;
+  height: 100%; * /
 }
 
 #settings-row.isShown {
@@ -254,7 +259,7 @@ main {
   position: absolute;
   padding: 20px;
   inset: 100px;
-  /* 350px 200px 200px 200px; */
+  / * 350px 200px 200px 200px; * /
   background-color: rgba(255, 255, 255, 0.5);
   color: rgb(20, 20, 20);
   font-size: 1.5rem;
@@ -294,7 +299,7 @@ main {
 }
 
 #top-menu {
-  /* background: red; */
+  / * background: red; * /
   position: absolute;
   left: 20px;
   right: 20px;
@@ -303,7 +308,7 @@ main {
 }
 
 #main-area {
-  /* background: blue; */
+  / * background: blue; * /
   position: absolute;
   left: 20px;
   right: 20px;
@@ -313,13 +318,13 @@ main {
 }
 
 #main-area .row {
-  /* background: yellow; */
+  / * background: yellow; * /
   height: 100%;
 }
 
 #front-row, #back-row, #threed-row {
   height: 100%;
-  /* background: purple; */
+  / * background: purple; * /
 }
 
 #main-area canvas {
@@ -333,7 +338,7 @@ main {
   right: 20px;
   bottom: 0;
   height: 50px;
-  /* background: green; */
+  / * background: green; * /
   padding: 4px 4px;
   color: #666;
   font-size: 1rem;
@@ -352,3 +357,5 @@ main {
 .row.full-height {
   height: 100%;
 }
+
+*/
