Got 3D interface working.

--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,16 @@ body {
   overflow: clip;
 }
 
+#params {
+  /* display: none; */
+  background: 'red';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100px;
+  height: 100px;
+}
+
 /*
 
 button {
