--- a/styles/style.css
+++ b/styles/style.css
@@ -26,18 +26,91 @@ body {
   /* line-height: 1.5; */
   color: #ffffff;
   text-align: left;
-  background-color: rgb(255, 0, 0); /* rgb(82, 82, 82); */
+  background-color: rgb(40, 40, 50); /* rgb(82, 82, 82); */
   overflow: clip;
 }
 
 #params {
   /* display: none; */
-  background: 'red';
+  background: rgba(20, 20, 20, 0.8);
   position: fixed;
-  top: 0;
+  bottom: 0;
   left: 0;
-  width: 100px;
-  height: 100px;
+  /* width: 350px; */
+  width: auto;
+  height: auto;
+  /* min-height: 600px; */
+  padding: 1em 1em 0.5em 0.5em;
+  font-size: 0.8em;
+  font-weight: normal;
+  border-top-right-radius: 20px;
+}
+
+#params div.top_row {
+  text-align: right;
+}
+
+#params.open div.top_row {
+  margin-bottom: 2.5em;
+}
+
+#params div.top_row button {
+  background: rgb(50, 50, 50);
+  display: block;
+  width:  24px;
+  height: 24px;
+  border: none;
+  text-align: center;
+  border-radius: 12px;
+  color: rgb(100, 100, 100);
+}
+
+#params.open div.top_row button {
+  background: rgb(100, 100, 100);
+  display: block;
+  width:  24px;
+  height: 24px;
+  border: none;
+  text-align: center;
+  border-radius: 12px;
+  float: right;
+  color: rgb(180, 180, 180);
+}
+
+
+#params div.row {
+  clear: both;
+  display: none;
+}
+
+#params.open {
+  /* height: 100px; */
+}
+
+#params.open div.row {
+  /* background: salmon; */
+  margin-top: 0.6em;
+  display: block;
+}
+
+#params div.row label {
+  min-width: 140px;
+  /* background: pink; */
+  display: inline-block;
+}
+
+#params div.row label span.val {
+  /* background: skyblue; */
+  float: right;
+  margin-right: 1em;
+}
+
+body > button {
+  color: rgb(120, 120, 120);
+  background: rgb(20, 20, 20);
+  padding: 1em;
+  border-radius: 6px;
+  border: none;
 }
 
 /*
